Properly fixes #97
Turns out it was the entire colour line that needed removing, and that make the other buttons look ugly (imo)

--- a/static/css/inboxen.css
+++ b/static/css/inboxen.css
@@ -146,7 +146,6 @@ body {
 .btn {
     margin-top:5px;
     border-color: #BBB;
-    color: rgb(90, 90, 90);
 }
 
 .btn-centre {
